--- a/playbook_test.yaml
+++ b/playbook_test.yaml
@@ -3,16 +3,16 @@
   tasks:
     - name: Server uptime
       bash: uptime
-    - name: Server disk usage
-      bash: du -h
+    # - name: Server disk usage
+    #   bash: du -h
     - name: Server memory usage
       bash: free -m
 
 - hosts: webservers
   tasks:
-    # - name: Server uptime
-    #   bash: uptime
+    - name: Server uptime
+      bash: uptime
     # - name: Server disk usage
     #   bash: du -h
     - name: Say hello
-      bash: echo "Hello World"
+      bash: echo "Hello ${hostname}"
