--- a/playbook_test.yaml
+++ b/playbook_test.yaml
@@ -16,4 +16,4 @@
 - hosts: loadbalancers
   tasks:
     - name: Install nginx
-      bash: apt install nginx -y
+      bash: apt update && apt install nginx -y
